--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.8, CPAN::Meta::Converter version 2.132830'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,13 +18,18 @@ name: Redis-CappedCollection
 no_index:
   directory:
     - t
-    - xt
     - inc
+    - xt
+provides:
+  Redis::CappedCollection:
+    file: lib/Redis/CappedCollection.pm
+    version: 0.11
 requires:
   Data::UUID: 1.217
   Digest::SHA1: 2.13
   Mouse: 0.97
   Params::Util: 1.07
-  Redis: 1.952
+  Redis: 1.963
   Try::Tiny: 0.18
-version: 0.10
+  perl: 5.010
+version: 0.11
