--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,7 @@ test_requires:
   Data::UUID: '1.217'
   JSON::XS: '3.01'
   Net::EmptyPort: 0
+  Sys::SigAction: 0.21
   Test::Exception: 0.31
   Test::NoWarnings: 1.04
   Test::RedisServer: 0.04
@@ -16,6 +17,7 @@ build_requires:
   JSON::XS: '3.01'
   ExtUtils::MakeMaker: '0'
   Net::EmptyPort: '0'
+  Sys::SigAction: 0.21
   Test::Exception: '0.31'
   Test::RedisServer: '0.04'
 dynamic_config: 1
