port format_message() from TS project
fixes #500

Change-Id: I1b60298b7b8aad9a660d2a974d9fdb80257b93b4

--- a/META.yml
+++ b/META.yml
@@ -37,6 +37,9 @@ provides:
   Redis::CappedCollection:
     file: lib/Redis/CappedCollection.pm
     version: 1.05
+  Redis::CappedCollection::Util:
+    file: lib/Redis/CappedCollection/Util.pm
+    version: 1.05
 requires:
   Const::Fast: 0.014
   Digest::SHA1: 2.13
