--- a/META.yml
+++ b/META.yml
@@ -36,10 +36,10 @@ no_index:
 provides:
   Redis::CappedCollection:
     file: lib/Redis/CappedCollection.pm
-    version: 1.09
+    version: 1.10
   Redis::CappedCollection::Util:
     file: lib/Redis/CappedCollection/Util.pm
-    version: 1.09
+    version: 1.10
 requires:
   Const::Fast: 0.014
   Digest::SHA1: 2.13
@@ -48,7 +48,8 @@ requires:
   Redis: 1.976
   Try::Tiny: 0.18
   perl: 5.010
-version: 1.09
+version: 1.10
 resources:
+  bugtracker: https://github.com/TrackingSoft/Redis-CappedCollection/issues
   homepage: https://github.com/TrackingSoft/Redis-CappedCollection
   repository: git://github.com/TrackingSoft/Redis-CappedCollection.git
